<resources>
    <string name="app_name">experiment2</string>
    <string name="hello_table_layout">Hello TableLayout</string>
    <string name="constraint_layout_test">ConstraintLayoutTest</string>
    <string name="input">Input</string>
    <string name="space_stations">Space Stations</string>
    <string name="flights">Flights</string>
    <string name="rovers">Rovers</string>
    <string name="dca">DCA</string>
    <string name="mars">MARS</string>
    <string name="one_way">One Way</string>
    <string name="traveller">1 Traveller</string>
    <string name="depart">DEPART</string>
</resources>