<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="14dp"
    android:background="@color/white"
    android:id="@+id/constraint_layout_2"
    tools:context=".ConstraintLayout2Activity">
    >
    <Button
        android:id="@+id/bt_space_stations"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="168dp"
        android:background="@color/construction_grey"
        android:drawableTop="@drawable/space_station_icon"
        android:drawablePadding="4dp"
        android:text="@string/space_stations"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bt_flights"
        app:layout_constraintTop_toTopOf="parent"
        />
    <Button
        android:id="@+id/bt_flights"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="168dp"
        android:background="@color/construction_grey"
        android:drawableTop="@drawable/rocket_icon"
        android:drawablePadding="4dp"
        android:text="@string/flights"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/bt_space_stations"
        app:layout_constraintEnd_toStartOf="@id/bt_rovers"
        app:layout_constraintTop_toTopOf="parent"
        />
    <Button
        android:id="@+id/bt_rovers"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="168dp"
        android:background="@color/construction_grey"
        android:drawableTop="@drawable/rover_icon"
        android:drawablePadding="4dp"
        android:text="@string/rovers"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/bt_flights"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/bt_DCA"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:background="@color/success_green"
        android:gravity="center"
        android:text="@string/dca"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@id/iv_double_arrows"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_space_stations" />

    <ImageView
        android:id="@+id/iv_double_arrows"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/double_arrows"
        app:layout_constraintStart_toEndOf="@id/bt_DCA"
        app:layout_constraintEnd_toStartOf="@id/bt_MARS"
        app:layout_constraintTop_toTopOf="@id/bt_DCA"
        app:layout_constraintBottom_toBottomOf="@id/bt_DCA"

        />

    <Button
        android:id="@+id/bt_MARS"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:background="@color/success_green"
        android:gravity="center"
        android:text="@string/mars"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_double_arrows"
        app:layout_constraintTop_toBottomOf="@id/bt_rovers" />

    <Switch
        android:id="@+id/switch_one_way"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@color/orange"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/one_way"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_DCA"
        />

    <Button
        android:id="@+id/bt_traveller"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:background="@color/orange"
        android:text="@string/traveller"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/switch_one_way"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/iv_galaxy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/galaxy"
        android:scaleType="centerInside"
        app:layout_constraintStart_toEndOf="@id/iv_galaxy_rocket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bt_depart"
        app:layout_constraintTop_toBottomOf="@id/bt_traveller"

        />


    <ImageView
        android:id="@+id/iv_galaxy_rocket"
        android:layout_width="26dp"
        android:layout_height="79dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/rocket_icon"
        app:layout_constraintBottom_toTopOf="@id/bt_depart"
        app:layout_constraintEnd_toStartOf="@id/iv_galaxy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_traveller"
        app:layout_constraintVertical_bias="0.428" />

    <Button
        android:id="@+id/bt_depart"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginTop="10dp"
        android:background="@color/success_green"
        android:text="@string/depart"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_galaxy"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>